specify the page content

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <nav class="navbar"></nav>
+
+
+
     
+    <div class="main-container"></div>
+    <footer class="footer"></footer>
 </body>
 </html>
