add main content(title and images) with its style

--- a/index.html
+++ b/index.html
@@ -41,7 +41,50 @@
         </div>
     </nav>
     <!-- main content -->
-    <div class="main-container"></div>
+    <div class="main-container">
+        <div class="title-div">
+            <p>Get your next</p>
+            <p class="second-p">weeknight dinner idea</p>
+            <p class="third-p">. <span class="dot">. . . </span></p>
+        </div>
+
+        <div class="images-container">
+            <div class="images1">
+                <img src="https://i.pinimg.com/originals/c6/5b/37/c65b37a8d0f002c9ff17f6d13b58de67.png" width="13.5%"
+                    height="100%" class="first-image1" />
+                <img src="https://i.pinimg.com/474x/84/85/74/8485749473c89489d38027c62e35f797.jpg" width="13.5%"
+                    height="100%" class="second-image1" />
+                <img src="https://i.pinimg.com/originals/64/eb/6e/64eb6e2c4164c79dd87aff3f72cbf4c5.jpg" width="13.5%"
+                    height="100%" class="third-image1" />
+                <img src="https://i.pinimg.com/originals/4e/f3/4a/4ef34a60f9d8493da16c8f7ed09f0aea.jpg" width="13.5%"
+                    height="100%" class="fourth-image1" />
+                <img src="https://i.pinimg.com/originals/45/71/73/457173fa845b22d14efae75b262a284b.jpg" width="13.5%"
+                    height="100%" class="fifth-image1" />
+                <img src="https://i.pinimg.com/originals/3b/2c/cf/3b2ccf74af0bc00121f66d38a2cd23d0.png" width="13.5%"
+                    height="100%" class="sixth-image1" />
+                <img src="https://i.pinimg.com/originals/f4/f1/19/f4f119c4f7cb87faa44f6505d4d13843.jpg" width="13.5%"
+                    height="100%" class="seventh-image1" />
+            </div>
+
+            <div class="images2">
+                <img src="https://i.pinimg.com/originals/e8/1b/a9/e81ba959ba76c4d72c8339dceb80b33b.jpg" width="13.5%"
+                    height="100%" class="first-image2" />
+                <img src="https://i.pinimg.com/originals/35/dc/d5/35dcd5bfc8dfb82adfc515a9f22f611c.jpg" width="13.5%"
+                    height="100%" class="second-image2" />
+                <img src="https://i.pinimg.com/originals/1e/d2/ff/1ed2fffc37b325f5797a9235aa0a3e0b.jpg" width="13.5%"
+                    height="100%" class="third-image2" />
+                <img src="https://i.pinimg.com/originals/6b/c6/43/6bc643792ca40ac105b8df459739c8a8.jpg" width="13.5%"
+                    height="100%" class="fourth-image2" />
+                <img src="https://i.pinimg.com/originals/f0/f9/74/f0f9748d88b58a3c92926d4907120fc9.jpg" width="13.5%"
+                    height="100%" class="fifth-image2" />
+                <img src="https://i.pinimg.com/originals/d9/9f/f4/d99ff4255659e7aeda741b1ac037ae27.jpg" width="13.5%"
+                    height="100%" class="sixth-image2" />
+                <img src="https://i.pinimg.com/originals/65/e1/df/65e1df96d8def6c34500afcdb4fd6580.jpg" width="13.5%"
+                    height="100%" class="seventh-image2" />
+            </div>
+
+        </div>
+    </div>
     <footer class="footer"></footer>
 </body>
 
