add the footer with its style

--- a/index.html
+++ b/index.html
@@ -82,10 +82,16 @@
                 <img src="https://i.pinimg.com/originals/65/e1/df/65e1df96d8def6c34500afcdb4fd6580.jpg" width="13.5%"
                     height="100%" class="seventh-image2" />
             </div>
-
         </div>
+        <div class="overlay"></div>
     </div>
-    <footer class="footer"></footer>
+
+    <div class="footer-container">
+        <button class="down-button">🡣</button>
+        <footer class="footer">
+            <p>Here's how it works 🡣</p>
+        </footer>
+    </div>
 </body>
 
 </html>
