--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
 
         <div class="images-container">
-            <div class="images1">
+            <div class="images">
                 <img src="https://i.pinimg.com/originals/c6/5b/37/c65b37a8d0f002c9ff17f6d13b58de67.png" width="13.5%"
                     height="100%" class="first-image1" />
                 <img src="https://i.pinimg.com/474x/84/85/74/8485749473c89489d38027c62e35f797.jpg" width="13.5%"
@@ -66,7 +66,7 @@
                     height="100%" class="seventh-image1" />
             </div>
 
-            <div class="images2">
+            <div class="images">
                 <img src="https://i.pinimg.com/originals/e8/1b/a9/e81ba959ba76c4d72c8339dceb80b33b.jpg" width="13.5%"
                     height="100%" class="first-image2" />
                 <img src="https://i.pinimg.com/originals/35/dc/d5/35dcd5bfc8dfb82adfc515a9f22f611c.jpg" width="13.5%"
